# scamp_win

scamp/: .gitignore  CMakeLists.txt  INSTALL_OPENBLAS_WINDOWS.md  README_WINDOWS.md  build_windows.bat.in  generate_test_catalogs.py  run_tests.bat  run_tests.ps1  scamp_default.conf  scamp_test.conf  test_scamp_alignment.bat  test_scamp_basic.bat
scamp/doc/src/: conf.py
scamp/src/: astrcplot.c  astrefcat.c  astrsolve.c  catout.c  cplot.c  define.h  field.c  main.c  mosaic.c  photsolve.c  prefs.c  proper.c  url.c  url.h  win32_compat.c  win32_compat.h
scamp/src/fits/: fitsbody.c  fitscat.h  fitscleanup.c
scamp/src/wcs/: wcs.h
scamp/tests/: test_internal.conf  test_windows_compat.c
